# map_evaluation_tools

./: CMakeLists.txt  README.md  setup.py
map_evaluation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: example.py
src/: map_evaluation.cpp  map_evaluation.hpp  orth_map_metrics.cpp  test.cpp
